[package]
name = "makemkv-renamer"
version = "1.1.0"
edition = "2024"

[profile.release]
strip = true # Automatically strip symbols from the binary
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
main_error = "0.1.2"
thiserror = "2.0.12"
regex = "1.11.1"
